<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pregnansi</string>
    <string name="action_settings">About Me</string>
    <string name="action_message">Message</string>
    <string name="action_search">Search</string>
    <string name="action_edit_name">Edit Name</string>
    <string name="action_add_user">Add User</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_recover">Recover</string>
    <string name="action_submit">Submit</string>
    <string name="action_add_to_do">Add To-Do</string>
    
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    
    <string name="create_new_group">Create new Group</string>
    <string name="create_group">Create Group</string>
    
    <string name="home">Home</string>
    <string name="sharing">Sharing</string>
    
    <string name="full_name">First &amp; Last Name</string>
    <string name="email">E-Mail</string>
    <string name="group_name">Group name</string>
        
    <string name="due_date">Due Date</string>
    <string name="insights">Insights</string>
    <string name="whats_next">What\'s next?</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    
    <string name="prev">Prev</string>
    <string name="week_number">Week %d</string>
    <string name="next">Next</string>
    
    <string name="pair_scale">Connect weighing scale</string>
    <string name="scale_paired">Weighing scale connected</string>
    <string name="pair_google_fit">Connect Google Fit</string>
    <string name="google_fit_paired">Google Fit connected</string>
    
    <string name="archived_cards">Archived Cards</string>
    <string name="last_seen">Last seen</string>
    
    <string name="email_justification">Needed for account recovery. No spam, we promise!</string>
    <string name="recover_account">Already signed up? Tap here to recover your account</string>
    <string name="recovery_email_code_explanation">
        We have sent a recovery code to your inbox. Enter that above to log in.
        It may take a few minutes for the email to arrive. Interweb gets clogged sometimes!
    </string>
    <string name="user_not_found_explanation">
        Sorry we can\'t find an account with that info. Are you sure you are entering the email 
        you signed up with? If you continue having trouble, send an email to support@pregnansi.com.
    </string>
    <string name="expired_recovery_code">
        Hmm. The recovery code you just entered seems to have expired.
        Try submitting recovery request again.
    </string>
    
    <string name="weight_scale_not_supported">
        Connecting to weighing scale not supported on your phone.
    </string>
    <string name="stand_on_scale">Stand on the weighing scale to connect.</string>
    <string name="weight_message">Recorded weight %d lbs</string>
    <string name="weight_message_with_date" formatted="false">Recorded weight %d lbs on %s</string>
    
    <string name="search_results_not_found">No results found.</string>
    <string name="submitting_your_answer">Submitting your answer&#8230;</string>        
    
    <string name="update_photo">Update photo</string>
    <string-array name="photo_options">
        <item>Take Photo</item>
        <item>Choose from Library</item>
    </string-array>
    
    <string name="week">week</string>
    <string name="trimester">trimester</string>
    <string-array name="trimester_options">
        <item>1st</item>
        <item>2nd</item>
        <item>3rd</item>
    </string-array>

    <string name="archive">Archive</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="share">Share</string>
    <string name="learn_more">Learn more</string>

    <string name="copyright">Copyright 2015. All rights reserved.</string>
</resources>
