<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <com.jjoe64.graphview.GraphView
        android:id="@+id/graph"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginRight="@dimen/medium_margin"
        android:layout_marginLeft="@dimen/medium_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/connect_health"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_gravity="left"
            android:text="@string/pair_google_fit"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/connect_scale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="@dimen/medium_margin"
            android:layout_gravity="right"
            android:text="@string/pair_scale"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/insights_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/medium_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/insights"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/secondary_text_gray"
            android:visibility="gone" />

        <ListView
            android:id="@+id/cards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@android:color/transparent" />
    </LinearLayout>

</LinearLayout>